新增单/多设备session处理
